--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+// @import 'bootstrap/scss/bootstrap';
+
+// @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+@import 'ngx-toastr/toastr';
