--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -18,7 +18,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" routerLink="/admin/category">Category</a></li>
-                  <li><a class="dropdown-item" href="#">Product</a></li>
+                  <li><a class="dropdown-item" routerLink="/admin/product">Product</a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
